[workspace]
members = ["async_stuff", "simple"]
resolver = "3" # needed for edition = "2024"

# We have virtual workspace (not root-package workspace which has [package] section)
# [package]
# name = "demos-rs"
# version = { workspace = true }
# edition = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
pin-project-lite = "0.2.16"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
