[workspace]
members = [ "simple" ]
resolver = "3" # needed for edition = "2024"

# We have virtual workspace (not root-package workspace which has [package] section)
# [package]
# name = "demos-rs"
# version = { workspace = true }
# edition = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2024"
# edition = "2018"

# [lints.clippy]

[workspace.dependencies]
